# InterProcessCommunication

./: CMakeLists.txt  Dockerfile  README.md  compose.yml
docs/: Doxyfile  Doxyfile.in
includes/: ipc.h
protos/: CMakeLists.txt  ipc.proto
sources/: client_1.cpp  client_2.cpp  error_handling.cpp  error_handling.h  ipc.cpp  ipc.h  ipc_clients.cpp  ipc_server.cpp  main.cpp  server.cpp
sources/client/: application.cpp  application.h
sources/common/: error_handling.cpp  error_handling.h
sources/server/: algorithm_runner.cpp  algorithm_runner.h  application.cpp  application.h
tests/: conftest.py  test_client_1.py  test_client_2.py
